[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubernetes-job-api"
version = "1.0.0"
description = "A REST API for creating and managing Kubernetes jobs"
requires-python = ">=3.8"
dependencies = [
    "Flask==2.3.3",
    "flask-restx==1.3.0",
    "kubernetes==27.2.0",
    "PyYAML==6.0.1",
    "Werkzeug==2.3.7",
    "marshmallow==3.20.1",
    "Paramiko==4.0.0"
]

[project.scripts]
k8s-job-api = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
